--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: Old-John-Brown-the-man-whose-soul-is-marching-on_2050
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Hawkins, Walter
     gutenberg_agent_id: '801'
     url: http://www.gutenberg.org/2009/agents/801
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/2050#Old-John-Brown-the-man-whose-soul-is-marching-on
 gutenberg_issued: '2000-01-01'
 gutenberg_type: Text
 identifiers:
